--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,10 +1,19 @@
 Thumby IDE changelog!
 
+
+####################
+
+January 10th, 2022
+
+* Attempted to make emulator recording more reliable. Use ctrl+F5 to ensure the new page is fetched.
+
+
 ####################
 
 January 6th, 2022
 
 * Warning: https://tinycircuits.github.io/testing/ will be taken down on January 13th, 2022. Please save all work to your computer and move to the main IDE page https://tinycircuits.github.io/
+
 
 ####################
 
@@ -18,6 +27,7 @@ API
 General
 * Import modules into emulator without .py in path to get rid of error
 * Update main.py and menu.py to use less ram and to render credits screen
+
 
 ####################
 
