--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,18 @@ Thumby Code Editor changelog!
 
 ####################
 
+March 3rd, 2022
+
+* WARNING: https://tinycircuits.github.io/ and files stored on it will not be accessible starting March 16th, 2022. Please move to https://code.thumby.us/
+* Add audio to emulator + mute button
+* Close arcade on game open (not download)
+* Add button to go to changelog (Other Links)
+* Change links to point to new documentation site
+* Open arcade automatically if code editor page opened through https://arcade.thumby.us/
+
+
+####################
+
 February 18th, 2022
 
 * Change dark theme main color from black to #121212
