--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,7 @@ Thumby Code Editor changelog!
 May 12th, 2022
 
 * Attempt to fix some arcade games getting stuck when downloading to Thumby
+* Add 3x5 font to update
 
 
 ####################
