--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,13 @@
 Thumby Code Editor changelog!
 
-* WARNING: https://tinycircuits.github.io/ and files stored on it will not be accessible starting March 16th, 2022. Please move to https://code.thumby.us/
+####################
+
+July 18th, 2022
+
+* Update MicroPython to 1.19.1
+* Split Thumby API into different modules (allows speeding up import of `thumby` module)
+* Add saves API
+* Add Thumby Code Editor function to update MicroPython
 
 ####################
 
