--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,13 @@ Thumby Code Editor changelog!
 
 ####################
 
+August 25th, 2022
+
+* Automatically call machine.reset() when a game ends to prevent pollution of menu
+
+
+####################
+
 August 18th, 2022
 
 * Expose all Ace code editor themes under 'Utilities' dropdown
