--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,7 +4,7 @@ Thumby Code Editor changelog!
 
 December 15th, 2022
 
-* Small cleanup of core files, including reduced code import (by community members acedent, hemlockmay).
+* Small cleanup of core files, including reduced code imports (by community members acedent, hemlockmay).
 
 
 ####################
