--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,10 +2,10 @@ Thumby Code Editor changelog!
 
 ####################
 
-December 17th, 2022
+December 20th, 2022
 
-* Cleanup of core files; faster startup and reduced code imports (by community members acedent, hemlockmay).
-* Adjusted contrast settings to support all OLED models (by community members acedent, agovtman).
+* Tweak core files; faster startup and reduced code imports (by community members acedent, hemlockmay).
+* Adjust contrast settings to support all OLED models (by community members agovtman, acedent).
 
 
 ####################
