--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,7 +2,7 @@ Thumby Code Editor changelog!
 
 ####################
 
-December 20th, 2022
+December 22nd, 2022
 
 * Tweak core files; faster startup and reduced code imports (by community members acedent, hemlockmay).
 * Adjust contrast settings to support all OLED models (by community members agovtman, acedent).
