--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,11 @@
 Thumby Code Editor changelog!
 
+August 27th, 2024
+
+* Updated code library files into one with support for Thumby, Thumby Color, and Thumby Color Linux simulator
+
+####################
+
 October 9th, 2023
 
 * Fix animated Blockly sprites (use ctrl+f5 to fetch latest version of the Code Editor)
